<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveSoccer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choix_match">Choisir un match</string>
    <string name="live_match">Mes matchs en cours</string>
    <string name="historiques_match">Historique de mes matchs</string>
    <string name="futurs_match">Mes matchs à venir</string>
    <string name="mes_equipes">Mes equipes suivies</string>
    <string name="configuration_sons">Configuration de sons</string>
    <string name="choix_league">Choisir une League</string> 
    <string name="detail_match">Details du Match</string> 
    
    <string name="scottish">Scottish Premier League</string>
    <string name="french">Ligue 1</string>
    <string name="england">English League Championship</string>
    <string name="germany">Bundesliga</string>
    <string name="italy">Serie A</string>
    <string name="spain">La Liga</string>
    <string name="suivie">suivre</string>
     <string name="nsuivie">ne plus suivre</string>
    <string name="equipe">Equipe</string>
    <string name="score">Score</string>
    <string name="paris">Parier</string>
    
    <string name="pays">Pays : </string>
    <string name="stade">Stade : </string>
    <string name="website">Site Web : </string>
    <string name="nom_buteur">Noms des buteurs</string>
    <string name="carton_jaune">Cartons Jaunes</string>
    <string name="carton_rouge">Cartons rouges</string>
    


</resources>
