<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/pays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pays" 
                android:textSize="20sp"
            	android:textStyle="bold" />

            <TextView
                android:id="@+id/stade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stade"
                 android:layout_marginTop="50dp"
                 android:textSize="20sp"
           		android:textStyle="bold" />
            
              <TextView
	                android:id="@+id/web"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/website"
	                android:layout_marginTop="50dp"
	                android:textSize="20sp"
	           		android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/textpays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Barcelone" 
                android:textSize="20sp"
            	android:textStyle="bold" />

            <TextView
                android:id="@+id/textstade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mourihno" 
                android:layout_marginTop="50dp"
                android:textSize="20sp"
            	android:textStyle="bold" />
             <TextView
                android:id="@+id/textwebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="www.celtic.uk.co" 
                android:layout_marginTop="50dp"
                android:textSize="20sp"
            	android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
